  * lib.distances.transform_StoR now checks input type (Issue #1699)
  * libdcd now writes correct length of remark section (Issue #1701)
  * DCDReader now reports the correct time based on istart information (PR #1767)
  * added requirement scipy >= 1.0.0 (absolutely needed: >= 0.19) (Issue #1775)
  * Universe.empty now warns about empty Residues and Segmnets (Issue #1771)

Changes
  * scipy >= 1.0.0 is now required (issue #1775 because of PR #1758)

        
01/24/18 richardjgowers, rathann, orbeckst, tylerjereddy, mtiberti, kain88-de,
         jbarnoud, nestorwendt, mmattaNU, jmborr, sobuelow, sseyler, rcortini,
         xiki-tempula, manuel.nuno.melo

  * 0.17.0

Enhancements
  * added support for GSD format topology/trajectory parser (PR #1693)
  * spherical selections tokens can use the periodic KDTree (PR #1733)
  * added Amber residue names to 'protein' atom selection (PR #1704)
  * KDTree for neighbor search on periodic systems (PR #1660, #1692)
  * Python versions 3.4 and upwards are now supported (Issue #260)
  * added Universe.empty to allow Universes of custom size to be constructed
    without any files (PR #1533)
  * add minimal topology reader that is able to load coordinate/trajectory
    files on their own without requiring a topology file (Issue #1371)
  * added "parse_n_atoms" to Reader API and implemented this for DCD, INPCRD,
    NCDF, TRR and XTC formats (PR #1533)
  * added 'all_coordinates' keyword to Universe to also load the topology file
    as a frame of the reader together with the trajectory files (PR #1533)
  * add low level lib.formats.libdcd module for reading/writing DCD (PR #1372)
  * replace old DCD reader with a Python 3 ready DCD reader (Issue #659)
  * about 20% speed improvements for GNM analysis. (PR #1579)
  * added support for Tinker TXYZ and ARC files
  * libmdaxdr and libdcd classes can now be pickled (PR #1680)
  * speed up atomgroup.rotate when point = (0, 0, 0) (Issue #1707)